--- a/artifacts/bom.json.template
+++ b/artifacts/bom.json.template
@@ -16,7 +16,7 @@
 			{
 				"name":"cluster-api-provider-cloud-director",
 				"version":"__VERSION__",
-				"imageRepository":"projects.registry.vmware.com/vmware-cloud-director"
+				"imageRepository":"__REGISTRY__"
 			}
 		]
 	}
