--- a/artifacts/dependencies.txt.template
+++ b/artifacts/dependencies.txt.template
@@ -1,1 +1,1 @@
-projects.registry.vmware.com/vmware-cloud-director cluster-api-provider-cloud-director __VERSION__
+__REGISTRY__ cluster-api-provider-cloud-director __VERSION__
