update generated files

--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -700,6 +700,41 @@ spec:
                   username:
                     type: string
                 type: object
+              zoneDetails:
+                description: ZoneDetailsSpec is a detailed summary of the zones in
+                  the cluster as well as the ZoneType used
+                properties:
+                  userSpecifiedEdgeGatewayZone:
+                    type: string
+                  zoneType:
+                    type: string
+                  zones:
+                    items:
+                      description: Zone is an Availability Zone in VCD
+                      properties:
+                        controlPlaneZone:
+                          default: false
+                          type: boolean
+                        loadBalancerIP:
+                          type: string
+                        loadBalancerPort:
+                          type: integer
+                        name:
+                          type: string
+                        ovdcName:
+                          type: string
+                        ovdcNetworkName:
+                          type: string
+                      required:
+                      - controlPlaneZone
+                      - name
+                      - ovdcName
+                      - ovdcNetworkName
+                      type: object
+                    type: array
+                type: object
+              zonesConfigMapName:
+                type: string
             required:
             - org
             - ovdc
@@ -755,6 +790,25 @@ spec:
                   - type
                   type: object
                 type: array
+              failureDomains:
+                additionalProperties:
+                  description: FailureDomainSpec is the Schema for Cluster API failure
+                    domains. It allows controllers to understand how many failure
+                    domains a cluster can optionally span across.
+                  properties:
+                    attributes:
+                      additionalProperties:
+                        type: string
+                      description: Attributes is a free form map of attributes an
+                        infrastructure provider might use or require.
+                      type: object
+                    controlPlane:
+                      description: ControlPlane determines if this failure domain
+                        is suitable for use by control plane machines.
+                      type: boolean
+                  type: object
+                description: FailureDomains is a slice of FailureDomains.
+                type: object
               infraId:
                 type: string
               loadBalancerConfig:
@@ -828,6 +882,40 @@ spec:
                       required:
                       - id
                       - name
+                      type: object
+                    type: array
+                type: object
+              zoneDetails:
+                description: ZoneDetailsStatus
+                properties:
+                  userSpecifiedEdgeGateway:
+                    type: string
+                  userSpecifiedEdgeGatewayZone:
+                    type: string
+                  zoneType:
+                    type: string
+                  zones:
+                    items:
+                      description: Zone is an Availability Zone in VCD
+                      properties:
+                        controlPlaneZone:
+                          default: false
+                          type: boolean
+                        loadBalancerIP:
+                          type: string
+                        loadBalancerPort:
+                          type: integer
+                        name:
+                          type: string
+                        ovdcName:
+                          type: string
+                        ovdcNetworkName:
+                          type: string
+                      required:
+                      - controlPlaneZone
+                      - name
+                      - ovdcName
+                      - ovdcNetworkName
                       type: object
                     type: array
                 type: object
@@ -2427,6 +2515,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: capvcd-system/capvcd-serving-cert
+  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-mutating-webhook-configuration
@@ -2477,6 +2566,7 @@ kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: capvcd-system/capvcd-serving-cert
+  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-validating-webhook-configuration
